check intersection via @turf lib

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <canvas width="800" height = "600" id="canvas"></canvas>
 
 
+    <div>
+        <button class="check-btn">Check intersect of two polygons</button>
+        <button class="clear-canvas-btn">Clear Canvas</button>
+    </div>
+
+    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
     <script src="./core.js"></script>
 </body>
 </html>
